# ussd-prod-release

./: .gitignore  .loaded-image-release  PACKAGE-BUILD.md  README.md  README_am.md  README_en.md  README_vi.md  build-all.sh  docker-compose.bpf.yml  docker-compose.yml  push-to-github.sh
backups/: .latest
backups/ussdgw-20260621T161036Z/: manifest.txt
backups/ussdgw-20260621T171029Z/: manifest.txt
backups/ussdgw-20260621T171132Z/: gateway.env  manifest.txt
backups/ussdgw-20260621T184715Z/: manifest.txt
bpf-tps-monitor/: README.md
bpf-tps-monitor/collector/: .dockerignore  Cargo.toml  Dockerfile
bpf-tps-monitor/collector/src/: collector.rs  http.rs  main.rs  metrics.rs
bpf-tps-monitor/tui/: .dockerignore  Cargo.toml  Dockerfile
bpf-tps-monitor/tui/src/: app.rs  main.rs  poll.rs  ui.rs
docker/: package.manifest
docs/: BUILD-FROM-SOURCE.md  DEPLOY-GUIDE.md  e2e-grpc-ussd-test.md  e2e-grpc-ussd-test_am.md  e2e-grpc-ussd-test_en.md
gateway/: .env  Dockerfile.alpine  Dockerfile.zulu  README.md  build-docker-alpine.sh  build-docker-zulu.sh  docker-compose.yml  standalone.conf
scripts/: 00-preflight.sh  01-load-docker-image.sh  02-setup-host.sh  03-start-gateway.sh  03-switch-gateway.sh  04-load-bpf-images.sh  04-stop-gateway.sh  05-start-grpc-as.sh  05-stop-grpc-as.sh  06-run-map-smoke.sh  07-run-grpc-smoke.sh  08-check-gateway.sh  09-start-http-as.sh  09-stop-http-as.sh  12-run-http-pull-smoke.sh  13-run-http-push-smoke.sh  14-run-grpc-push-smoke.sh  build-package.sh  env.sh  start-all.sh  stop-all.sh  version.sh
scripts/lib/: health-wait.sh  (+1 more)
tools/: README.md
ussd-qa-team/: README.md
(+43 files in other folders)
