[package]
name = "sctp-m3ua-collector"
version = "0.1.0"
edition = "2021"
description = "AF_PACKET-based SCTP/M3UA traffic collector that exposes TPS metrics over HTTP/JSON"
license = "MIT"

[[bin]]
name = "sctp-m3ua-collector"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bytes = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
